# mydecoding

./: .gitignore  README.md  pyproject.toml
checkpoints/: compact_ckpt.py
mydecoding/: 1+1.py  __init__.py  cli.py  compare_next_token_topk.py  config.py  eval.py  eval_all_phase.py  eval_edd_paper_metrics_mtbench.py  eval_edd_speedup.py  eval_edd_speedup_fixed.py  eval_edd_speedup_mtbench.py  eval_mtbench_hidden_spec_aligned.py  eval_prefix_phases.py  eval_spec_phases_aligned.py  eval_speedup.py  fusion.py  infer_demo.py  infer_head1.py  infer_head1_ar3.py  model.py  show_json.py  training.py
mydecoding/cli/: __init__.py  generate.py
mydecoding/config/: __init__.py  dual_decoder.py
mydecoding/data/: partition_train_test.py  save_sharegpt.py  save_wiki.py  split_sharegpt.py
mydecoding/iTransfomer_Decoding/: check_threshold.py  eval_human_basemodel.py  eval_human_ngram.py  eval_humaneval.py  eval_humaneval_edd.py  model.py  trace_accept_edd_only.py  train.py  train_TTT.py
mydecoding/legacy_eval/: eval_all_phase.py  eval_prefix_phases.py  infer_demo.py  infer_head1.py
mydecoding/llm_judge/: eval_tree_decoding.py
mydecoding/models/: __init__.py  dual_decoder.py  edd_draft_model.py  outputs.py
mydecoding/modules/: __init__.py  draft_head.py  fusion.py  fusion_head.py  head2.py
mydecoding/slot_level_llama2_7B/: DIFF_NOTES.md  batch_eval_checkpoints.py  eval_humaneval.py  eval_humaneval_edd.py  model.py  modeling_llama.py  show_json.py  trace_accept_edd_only.py  train.py
mydecoding/training/: data_sharegpt.py  steps.py  train_edd_draft.py  training_3090.py  (+6 more)
(+9 files in other folders)
