[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mydecoding"
version = "0.1.0"
description = "Belief-fused speculative decoding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers",
  "datasets",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["mydecoding*"]

[project.scripts]
mydecoding-generate = "mydecoding.cli.generate:main"
